--- a/json_visualizer.html
+++ b/json_visualizer.html
@@ -51,7 +51,7 @@
 
 
 
-d3.json("dfafinal.json").then(function(graph){
+d3.json("dfafinal.dot.json").then(function(graph){
 
 
     console.log("after data call");
@@ -75,7 +75,7 @@ d3.json("dfafinal.json").then(function(graph){
                 .data(edges)
               .enter().append("path")
                 .attr("class", "link")
-                .attr("stroke-opacity", function(d) { return (d.value/10); })
+                .attr("stroke-opacity", function(d) { return (d.appearances/10); })
                 .attr('marker-end','url(#arrowhead)');
 
             // link.append("title")
@@ -110,7 +110,7 @@ d3.json("dfafinal.json").then(function(graph){
                 .style("text-anchor", "middle")
                 .style("pointer-events", "none")
                 .attr("startOffset", "50%")
-                .text(function (d) {return d.label});
+                .text(function (d) {return d.name});
 
             node = svg.selectAll(".node")
                 .data(nodes)
@@ -124,7 +124,7 @@ d3.json("dfafinal.json").then(function(graph){
                 );
 
             node.append("circle")
-                .attr("r", 5)
+                .attr("r", function (d, i) {return d.size/50;})
                 .style("fill", function (d, i) {return colors(i);})
 
             node.append("title")
@@ -132,7 +132,7 @@ d3.json("dfafinal.json").then(function(graph){
 
             node.append("text")
                 .attr("dy", -3)
-                .text(function (d) {return d.name;});
+                .text(function (d) {return d.label;});
 
             node.on("mouseover", focus).on("mouseout", unfocus);
 
